# chip8

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: chip8.cpp  chip8.h  main.cpp
test/: CMakeLists.txt
test/src/: tests.cpp
